--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <main class="main">
       <!--PARTIE I DU MAIN-->
-      <div class="Hebergements">
+      <div id="hebergements"class="Hebergements">
         <!--A Hébergements-->
 
         <div class="Hebergements__listeG">
